# blips-desafio-tecnico

./: .env.example  Makefile  README.md  README_TEST.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
docker/: Dockerfile.devcontainer  Dockerfile.prd  docker-compose.yaml
src/: __init__.py  main.py
src/api/: __init__.py
src/api/routes/: leads.py
src/clients/: dummy_json.py
src/core/: config.py
src/core_backup_root_owned/: config.py
src/db/: mongo.py
src/repositories/: lead_repository.py
src/schemas/: lead.py
src/services/: lead_service.py
